add rabbitmq address to psu-adapter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,6 @@ services:
     build: ../psu-adapter
     depends_on:
       - parking-service
+      - rabbitmq-parking-app
+    environment:
+      - spring.rabbitmq.host=rabbitmq-parking-app
