--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3309:3306"
   rabbitmq-parking-app:
-    image: rabbitmq
+    image: rabbitmq:3-management
     ports:
       - "15673:15672"
       - "5673:5672"
