--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3309:3306"
   rabbitmq-parking-app:
-    image: rabbitmq:3-management
+    image: rabbitmq
     ports:
       - "15673:15672"
       - "5673:5672"
@@ -16,7 +16,7 @@ services:
     build: ../payment-service
     ports:
       - "8089:8080"
-  parking-service:
+  parking-service: # doesnt work
     build: ../parking-service
     ports:
       - "8088:8080"
@@ -28,10 +28,21 @@ services:
       - rabbitmq-parking-app
   psu-adapter:
     build: ../psu-adapter
-    ports:
-      - "8079:8080"
     depends_on:
       - parking-service
-      - rabbitmq-parking-app
+  mail-service:
+    image: jakubzzak/mail-service-rabbitmq-python:0.0.2
     environment:
-      - spring.rabbitmq.host=rabbitmq-parking-app
+      - APP_NAME=The Parking App
+      - MQ_URL=amqp://rabbitmq-parking-app:5673
+      - MQ_QUEUE_NAME=mail-queue
+      - MQ_CONSUMER_TAG=mail-service-consumer
+      - MAIL_SERVER=smtp.websupport.sk
+      - MAIL_PORT=465
+      - MAIL_USER=
+      - MAIL_PASS=
+      - MAIL_DEFAULT_SENDER=
+    ports:
+      - "5001:5001"
+    depends_on:
+      - rabbitmq-parking-app
