--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,19 @@ services:
       - "15673:15672"
       - "5673:5672"
   payment-service:
-    image: patrykiciak/payment-service:0.0.2
+#    image: patrykiciak/payment-service:0.0.2 -- remote image
+    image: parking-app-payment-service:0.0.1
+    restart: on-failure
+    environment:
+      - spring.rabbitmq.host=rabbitmq-parking-app
+      - spring.rabbitmq.port=5672
     ports:
       - "8089:8080"
+    depends_on:
+      - rabbitmq-parking-app
   parking-service:
-    image: patrykiciak/parking-service:latest
+#    image: patrykiciak/parking-service:latest -- remote image
+    image: parking-app-parking-service:0.0.1
     restart: on-failure
     environment:
       - spring.datasource.url=jdbc:mysql://mysql-parking:3306/parking-db
@@ -33,7 +41,8 @@ services:
       - mysql-parking
       - rabbitmq-parking-app
   psu-adapter:
-    image: patrykiciak/psu-adapter:latest
+#    image: patrykiciak/psu-adapter:latest -- remote image
+    image: parking-app-psu-adapter:0.0.1
     restart: on-failure
     environment:
       - spring.rabbitmq.host=rabbitmq-parking-app
@@ -48,6 +57,7 @@ services:
       - MQ_URL=amqp://rabbitmq-parking-app:5672
       - MQ_QUEUE_NAME=mail-queue
       - MQ_CONSUMER_TAG=mail-service-consumer
+#      TODO: REMOVE THE BELOW BEFORE PUSHING
       - MAIL_SERVER=
       - MAIL_PORT=
       - MAIL_USER=
@@ -73,3 +83,19 @@ services:
       - "3003:3000"
     depends_on:
       - redis-global-cache
+  gateway:
+    # solely local image
+    image: parking-app-gateway:0.0.1
+    restart: on-failure
+    environment:
+      - APP_NAME=The Parking App
+      - MQ_URL=amqp://rabbitmq-parking-app:5672
+      - MQ_MAIL_QUEUE=mail-queue
+      - AUTH_PORT=3001
+      - USER_PORT=3002
+    ports:
+      - "8765:8765"
+    depends_on:
+      - rabbitmq-parking-app
+      - mail-service
+
